# model-forge

./: .gitignore  404.html  README.md  index.html  mkdocs.yaml  objects.inv  pyproject.toml  test.ipynb  test.py  testcv.ipynb
.github/workflows/: mkdocs.yaml  pytest.yml  ruff.yaml
datapipeline/: index.html
dataset/: index.html
docs/: cross_validate.md  datapipeline.md  dataset.md  model_evaluator.md  model_orchastrator.md  predictions.md
model-forge/model/: modelorchastrator.py
model_evaluator/: index.html
model_forge/data/: datapipeline.py  dataset.py  predictions.py
model_forge/model/: cross_validate.py  metricevaluator.py  model_evaluator.py  model_orchastrator.py  modelorchastrator.py
model_orchastrator/: index.html
predictions/: index.html
search/: search_index.json
test/: test_cross_validate.py  test_dataset.py  test_metric_eval.py  test_model_evaluator.py  test_modelpipeline.py
