[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "model-forge"
version = "0.0.1"
description = "An toolset to forge your own machine learning models."
authors = ["Bart van Woesik bartwoesik1@gmail.com"]

[tool.poetry.dependencies]
python = "^3.9"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"