[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "model-forge"
version = "0.0.1"
description = "An toolset to forge your own machine learning models."
authors = ["Bart van Woesik <bartwoesik1@gmail.com>"]
packages = [
    { include = "model-forge" },
]

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^1.20.1"
pandas = "^1.2.2"
scikit-learn = "^1.4.0"
pytest = "^8.1.1"
