[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "model-forge"
version = "0.0.1"
description = "An toolset to forge your own machine learning models."
authors = ["Bart van Woesik <bartwoesik1@gmail.com>"]
packages = [
    { include = "model_forge" },
]


[tool.poetry.dependencies]
python = "^3.11"
numpy = "^1.20.1"
pandas = "^1.2.2"
scikit-learn = "^1.4.0"
omegaconf = "^2.3.0"
hydra-core = "^1.3.2"

[tool.poetry.dev-dependencies]
pytest = "^8.1.1"
pytest-asyncio = "0.23.5"
ruff = "^0.3.7"
mkdocs = "^1.5.3"
pre-commit = "^3.7.0"
pytest-cov = "*"

[tool.poetry.group.dev.dependencies]
mkdocs-material = "^9.5.20"
mkdocstrings-python = "^1.10.0"
mkdocs-table-reader-plugin = {git = "https://github.com/timvink/mkdocs-table-reader-plugin.git"}

[tool.pytest.ini_options]
markers = [
    "unit: Use this mark for all unit tests",
    "integration: Use this mark for all integration tests",
    "end2end: Use this mark for all end-to-end tests",
    "plots: Use this mark for all tests that produce plots",
    "asyncio: Use this mark for all tests concerning async callables"
]
log_cli = "true"
log_level = "DEBUG"
log_format = "%(asctime)s %(name)s %(levelname)s %(message)s"
log_date_format = "%Y-%m-%d %H:%M:%S"

addopts = "--cov=model_forge --cov-report xml --cov-report term-missing"
